Exp-2/output/hf-eval-data-v2/f00388_korean_table_question_answering.err
  File "output/hf-eval-data-v2/f00388_korean_table_question_answering.py", line 29
    sample_question = '질문' # Replace with your sample question in Korean
                    ^
SyntaxError: invalid syntax
